--- a/tasks/flowers_v2/composer.json
+++ b/tasks/flowers_v2/composer.json
@@ -6,7 +6,9 @@
             "email": "rudolfsbaltais@gmail.com"
         }
     ],
-    "require": {},
+    "require": {
+        "catfan/medoo": "^1.7"
+    },
     "autoload": {
         "psr-4": {
             "App\\": "app/"
